# PEPSFlow

./: .gitignore  CITATION.cff  CTM_alg.py  README.md  analysis.ipynb  iPEPS.py  main.py  pepsflow.cfg  pyproject.toml  requirements.txt  result.txt  run.ps1  run.sh  tensors.py  test.py
.github/workflows/: main.yml  test.yml
analysis/: analysis.ipynb  correlation_length.ipynb  increasing_D.ipynb  test_new_code.ipynb
analysis/data/correlation_length/: chi16.pth  chi4.pth  (+1 more)
analysis/profiling/: png.bat  profile.prof  profiling.py  profiling_SVD.ipynb
data/: data.pkl  data_1.pkl  data_2.pkl
data/adam/: chi4.pkl
data/d=2/: lam_2.7.pth  lam_2.75.pth  lam_2.8.pth  lam_2.85.pth  lam_2.9.pth  lam_2.95.pth  lam_3.0.pth  lam_3.05.pth  lam_3.1.pth  lam_3.15.pth  lam_3.2.pth  lam_3.25.pth  lam_3.3.pth
data/d=3/: lam_2.7.pth  lam_2.75.pth  lam_2.8.pth  lam_2.85.pth  lam_2.9.pth  lam_2.95.pth  lam_3.0.pth  lam_3.05.pth  lam_3.1.pth  lam_3.15.pth  lam_3.2.pth  lam_3.25.pth
data/lr/: lr0.01.pkl  lr2.pkl
data/new/: chi8.pkl
data/prev_chi/: chi8.pkl
data/prev_chi_lr/: chi32.pkl  chi8.pkl
data/prev_lambda/: chi16.pkl  chi8.pkl
data/random/: chi16.pkl
data/run1/: chi16.pkl  chi2.pkl  chi4.pkl  chi8.pkl
data/run2/: chi12.pkl  chi6.pkl  chi8.pkl
data/run3/: chi12.pkl  chi18.pkl  chi6.pkl  chi8.pkl
data/run4/: chi12.pkl  chi16.pkl  chi18.pkl  chi2.pkl  chi6.pkl  chi8.pkl
data/start/: chi24.pkl  chi28.pkl
data/tests/: test.pth
data2/Heis_D2/: chi_16.json
data2/Heis_D3/: chi_16.json
data2/Heis_D4/: chi_16.json
models/: CTM_alg.py  energy.py  map.py  tensors.py
output/: output_2.65.txt  output_2.7.txt  output_2.75.txt  output_2.8.txt  output_2.85.txt  output_2.9.txt  output_2.95.txt  output_3.0.txt  output_3.05.txt  output_3.1.txt  output_3.15.txt  output_3.2.txt
pepsflow/: __init__.py  iPEPS.py  iPEPS_trainer.py  start_pepsflow.py
pepsflow/models/: CTM_alg.py  observables.py  svd.py  tensors.py
pepsflow/train/: iPEPS.py  iPEPS_trainer.py
profiling/: contractions.py  einsum.py  profiling.py  profiling_SVD.ipynb  threads.py  torch_functions.py
src/pepsflow/: cli.py  optimize.cfg  optimize.py  pepsflow.cfg  pepsflow.py  plot.py  run.py  run.sh  start_pepsflow.py
test/: einsum_test.py  svd_test.py  tensordot_einsum_test.py
tests/: Ising_D2_state.txt  chi_16.json  chi_8.json  test.json  test_CTM_algs.py  test_gauges.py  test_gradient_convergence.py  test_iPEPS_trainer.py  test_io.py  test_minimal_canonical.json  test_minimal_canonical.py  test_minimization.py  test_minimizer.py  test_nnn.py  test_observables.py  test_optimization.py  test_pepsflow.cfg  test_pepsflow.py  test_projector_modes.py  truncation_error.py
tests/test_cfgs/: test_pepsflow1.cfg  test_pepsflow2.cfg
tests/test_data/: D3_test.json  D3_test_invertible_gauge_seed5.json  D3_test_minimal_canonical.json  D_3.json  J102_D3_bad.json  chi_16.json  chi_8.json  test.json  test_minimal_canonical.json  test_simple_update.json
tests/test_states/: Heis_D2_state.txt  J205_D3_state.txt
(+119 files in other folders)
