[tool.poetry]
name = "pepsflow"
version = "0.1.0"
description = ""
authors = ["DerkNiessink <derk@niessink.com>"]
readme = "README.md"
packages =[{include = "pepsflow", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
scienceplots = "^2.1.1"
click = "^8.1.7"
rich = "^13.9.2"
opt-einsum = "^3.4.0"
pytorch-minimize = "^0.0.2"
ncg-optimizer = "^0.1.1"
rich-click = "^1.8.5"
tensorboard = "^2.18.0"
torch-tb-profiler = "^0.4.3"

[tool.poetry.scripts]
pepsflow = "python -u -m pepsflow.cli.main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
