[tool.poetry]
name = "pepsflow"
version = "0.1.0"
description = ""
authors = ["DerkNiessink <derk@niessink.com>"]
readme = "README.md"
packages =[{include = "pepsflow", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.3"
matplotlib = "^3.9.2"
scienceplots = "^2.1.1"
click = "^8.1.7"
rich = "^13.9.2"
rich-click = "^1.8.5"
scipy = "^1.14.1"
fabric = "^3.2.2"

[tool.poetry.scripts]
pepsflow = "pepsflow.cli.main:cli"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.31.1"

[tool.poe.env]
ADDRESS = "derk@146.50.52.194"
DATA = "data"

[tool.poe.tasks.copy]
help = "Copy the write directory from the server to the local machine."
shell = """
set WRITE `python -c "import configparser;c=configparser.ConfigParser();c.read('src/pepsflow/pepsflow.cfg');print(c.get('parameters.folders', 'write'))"` 
echo ${WRITE}
#scp -r ${ADDRESS}:PEPSFlow/${DATA}/${WRITE} ${DATA}
"""
interpreter = "posix"

[tool.poe.tasks.log]
help = "Print the log file in the write directory on the server."
shell = """
ssh ${ADDRESS} "cat PEPSFlow/${DATA}/${WRITE}/${WRITE}.out"
"""
interpreter = "posix"

[tool.poe.tasks.optimize]
help = "Optimize the iPEPS tensor network with the specified parameters in the configuration file on the server."
shell = """
scp src/pepsflow/pepsflow.cfg ${ADDRESS}:PEPSFlow/src/pepsflow/pepsflow.cfg
ssh ${ADDRESS} "cd PEPSFlow && mkdir -p ${DATA}/${WRITE} && source .venv/bin/activate && nohup pepsflow params optimize > ${DATA}/${WRITE}/${WRITE}.out 2>&1 &"
"""
interpreter = "posix"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
